[package]
name = "sim7000-async"
version = "6.1.1"
authors = ["Zoey Riordan <zoey@dos.cafe>", "Joakim Hulthe <joakim@hulthe.net>"]
description = "Drivers for the SIM7000 series of chips"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/technocreatives/sim7000"
edition = "2021"
rust-version = "1.75"

[dependencies]
critical-section = "~1"
defmt = { version = "~1", optional = true }
embassy-executor = "~0.10"
embassy-futures = "~0.1"
embassy-sync = "~0.8"
embassy-time = "~0.5"
embedded-io-async = "~0.7"
futures = { version = "0.3", default-features = false, features = [
	"async-await",
] }
heapless = "~0.9"
log = { version = "~0.4", optional = true }

[features]
default = ["log"]
log = ["dep:log"]
defmt = ["dep:defmt", "embassy-time/defmt", "heapless/defmt"]
