[package]
name = "sim7000-async"
version = "0.1.2"
authors = ["Ellie H.", "Zoey Riordan <zoey@dos.cafe>", "Joakim Hulthe <joakim@hulthe.net>"]
description = "Drivers for the SIM7000 series of chips"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Beewitchy/sim7000"
edition = "2024"
rust-version = "1.94"

[dependencies]
critical-section = "1"
chrono = { version = "0.4", optional = true, default-features = false }
defmt = { version = "1", optional = true }
embassy-executor = "0.10"
embassy-futures = "0.1"
embassy-sync = "0.8"
embassy-time = "0.5"
embedded-io-async = "0.7"
futures = { version = "0.3", default-features = false, features = [
	"async-await",
] }
heapless = "0.9"
log = { version = "0.4", optional = true }
bitflags = "2.13"


[features]
default = ["log", "chrono"]
log = ["dep:log"]
defmt = ["dep:defmt", "embassy-time/defmt", "heapless/defmt"]
chrono = ["dep:chrono"]

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }